Use correct flags in param.mk.
	* configure.ac (SDK_LDFLAGS, SDK_LIBS): Link with
	boost::filesystem support library.
	* tests: Update.

--- a/configure.ac
+++ b/configure.ac
@@ -101,6 +101,8 @@ URBI_LIBPORT
 BOOST_FILESYSTEM
 BOOST_REGEX
 BOOST_TOKENIZER
+SDK_LDFLAGS="$SDK_LDFLAGS $BOOST_FILESYSTEM_LDFLAGS"
+SDK_LIBS="$SDK_LIBS $BOOST_FILESYSTEM_LIBS"
 
 
 ## ------ ##
