Support %id as a lvalue in parametric asts.
	* src/ast/ast.yml (MetaId): New ad-hoc meta node.
	* src/ast/parametric-ast.cc,
	* src/ast/parametric-ast.hh: Replace MetaId.
	* src/parser/ugrammar.y: Parse it.
	* src/runner/interpreter-visit.hxx: Reject MetaId nodes.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1189,6 +1189,15 @@ MetaCall:
     - '" "'
     - '{ visit(static_cast<const LValueArgs*>(n)); }'
 
+MetaId:
+  super: LValue
+  attributes:
+    - id:
+        type: unsigned
+  printer:
+    - '"%id:"'
+    - $id
+
 Class:
   super: Exp
   attributes:
