--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -128,6 +128,9 @@ meta-call.hxx
 meta-exp.cc
 meta-exp.hh
 meta-exp.hxx
+meta-id.cc
+meta-id.hh
+meta-id.hxx
 meta-lvalue.cc
 meta-lvalue.hh
 meta-lvalue.hxx
