Implement exceptions in Urbi.
	* src/ast/ast.yml (Catch, Throw, Try): New.
	* src/ast/.gitignore: Update.
	* src/flower/flower.hh, src/flower/flower.cc (visit):
	rewrite "Catch", "Throw", and "Try" nodes.
	* src/object/task.cc (Task): Initialize the
	"currentExceptionHandler" slot.
	* src/parser/utoken.l, src/parser/ugrammar.y: Handle
	"try"/"catch"/"throw".
	* src/runner/interpreter-visit.hxx: Ignore rewritten
	"Catch", "Throw", and "Try" nodes.

--- a/src/ast/.gitignore
+++ b/src/ast/.gitignore
@@ -27,6 +27,9 @@ call-msg.hxx
 call.cc
 call.hh
 call.hxx
+catch.cc
+catch.hh
+catch.hxx
 class.cc
 class.hh
 class.hxx
@@ -184,6 +187,12 @@ tagged-stmt.hxx
 this.cc
 this.hh
 this.hxx
+throw.cc
+throw.hh
+throw.hxx
+try.cc
+try.hh
+try.hxx
 unary.cc
 unary.hh
 unary.hxx
