--- a/externals/bootstrap.cfg
+++ b/externals/bootstrap.cfg
@@ -1,16 +1,14 @@
-external: externals/libport -> libport
-link: build-aux          -> externals/libport/build-aux
-link: include/libport    -> externals/libport/include/libport
-link: lib/libport        -> externals/libport/lib/libport
-link: sdk		 -> externals/libport/sdk
-link: lib/network/bsdnet -> externals/libport/network/bsdnet
+external: externals/sdk-remote -> sdk-remote
+link: sdk-remote         -> externals/sdk-remote
+link: src/uobject        -> externals/sdk-remote/src/liburbi/uobject
+
+link: build-aux          -> externals/sdk-remote/libport/build-aux
+link: sdk		 -> externals/sdk-remote/libport/sdk
+link: lib/network/bsdnet -> externals/sdk-remote/libport/network/bsdnet
 
 external: tests -> urbivalid
-
-external: externals/sdk-remote -> sdk-remote
-link: src/uobject -> externals/sdk-remote/src/liburbi/uobject
-
 external: bison -> bison
 subpackage: bison
+subpackage: externals/sdk-remote
 
 keep: INSTALL
