Add symlinks and config.h entries required by kernel2.
	* configure.ac: AC_DEFINE URBI_PATH.
	* externals/bootstrap.cfg: Add a libport symlink.

--- a/sdk-remote/externals/bootstrap.cfg
+++ b/sdk-remote/externals/bootstrap.cfg
@@ -1,4 +1,5 @@
 external: externals/libport -> libport
+link: libport            -> externals/libport
 link: build-aux          -> externals/libport/build-aux
 link: sdk                -> externals/libport/sdk
 link: include/libport    -> externals/libport/include/libport
