Install version.hh
	* src/Makefile.am: Install in env dir.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -44,6 +44,7 @@ include utils/local.mk
 REVISION_FILE = version.hh
 include $(top_srcdir)/build-aux/revision.mk
 
+nodist_env_DATA = version.hh
 
 ## ------------- ##
 ## Urbi-launch.  ##
