Enable `%id:x (args)' in parametric ASTs.
	* src/ast/ast.yml: Add arguments to MetaIds.
	* src/parser/ugrammar.y: Initialize them.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1190,7 +1190,7 @@ MetaCall:
     - '{ visit(static_cast<const LValueArgs*>(n)); }'
 
 MetaId:
-  super: LValue
+  super: LValueArgs
   attributes:
     - id:
         type: unsigned
