Do make in bison subdir unconditionnaly.
	* Makefile.am: Here.

--- a/Makefile.am
+++ b/Makefile.am
@@ -86,7 +86,5 @@ CHECK_BUILDFARM_FLAGS = AM_COLOR_TESTS=no VERBOSE=1 INSTRUMENT=1
 check-buildfarm:
 	cd tests && $(MAKE) $(AM_MAKEFLAGS) check-html $(CHECK_BUILDFARM_FLAGS)
 
-all: $top_builddir/bison/src/bison
-
-$top_builddir/bison/src/bison:
+all-local:
 	$(MAKE) -C bison MAKEFLAGS=
