Implement exceptions using C++ exceptions.
This is IMO simpler and more logic than using Tags:
- Exception handling in the runner is straightforward and easily extensible.
- It make it way simpler to throw an Urbi exception from any C++ code.
- Tag desugaring was eventually throwing StopExceptions
- Even with tag desugaring, a UnhandledException had to be thrown if there
  were no handler

	* src/ast/catches-type.cc,
	* src/ast/catches-type.hh: New. Collection of catches.
	* src/ast/ast.yml,
	* src/parser/ugrammar.y: Store catches as catches, not expressions.
	Add a local declaration for exceptions bound by "catch".
	* src/binder/binder.cc,
	* src/binder/binder.hh: Bind catches exceptions.
	* src/flower/flower.cc,
	* src/flower/flower.hh: Do not desugar `try' and `catch'.
	* src/object/root-classes.cc: Remove duplicate include.
	* src/object/system.cc (throw): Remove.
	* src/object/urbi-exception.cc,
	* src/object/urbi-exception.hh (MyException): New: Urbi-visible
	exceptions. The naming is very temporary to avoid name-clashes
	on UrbiException.
	* src/runner/interpreter-visit.hxx,
	* src/runner/interpreter.cc,
	* src/runner/interpreter.hh,
	* src/runner/runner.hh: Handle `throw' and `try/catch'.
	* src/object/cxx-object.cc,
	* share/urbi/exception.u: Do not report the routine name. Leave this
	job to the runner's backtrace.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -36,6 +36,7 @@ atomic_types:
 # from the name of the type.  Below are the exceptions.
 includes_map:
   "local_declarations_type":    '<ast/local-declarations-type.hh>'
+  "catches_type":               '<ast/catches-type.hh>'
   "exps_type":                  '<ast/exps-type.hh>'
   "flavor_type":                '<ast/flavor.hh>'
   "libport::RefCounted":        '<libport/ref-counted.hh>'
@@ -1270,7 +1271,7 @@ Try:
         type: rNary
         desc: The code to protect against an exception
     - handlers:
-        type: exps_type
+        type: catches_type
         desc: The exception handlers
   printer:
     - '"try {"'
@@ -1299,6 +1300,10 @@ Catch:
     - body:
         type: rNary
         desc: The handler to execute if we have a match
+    - declaration:
+        type: rLocalDeclaration
+        access: rW
+        init: '0'
   printer:
     - '"catch ("'
     - '{
