Use LaTeX2e commands.
	* doc/specs/Makefile (latex2e): New.
	* doc/specs/urbi-specs.tex: Modernize.

--- a/doc/specs/Makefile
+++ b/doc/specs/Makefile
@@ -10,4 +10,7 @@ all: $(PDFS)
 view: $(PDFS)
 	xpdf $<
 
+latex2e:
+	perl -pi.bak -0777 -e 's/\{\\em (.*?)}/\\emph{$$1}/gs' *.tex
+
 urbi-specs.pdf: urbi-specs.sty float.tex list.tex
