--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-INSTALL
+.deps
+/build-aux
+/configure
+/dev/*.pyc
+/lib
+/lib/network
+/sdk
+/sdk-remote
+/src/object/symbols.hh.old
 Makefile.in
 aclocal.m4
 autom4te.cache
-build-aux
-configure
-dev/*.pyc
-include/libport
-lib
-lib/libport
-lib/network
-sdk
-src/object/symbols.hh.old
-.deps
