Pass --disable-programs to sub configures.
	* configure.ac: Pass --enable-programs or --disable-programs
	explicitely to sub configures.

--- a/configure.ac
+++ b/configure.ac
@@ -81,6 +81,14 @@ URBI_WITH_LTDL
 pkgdatadir=${datadir}/gostai
 AC_SUBST([urbidir], [${pkgdatadir}/urbi])
 
+# By default, do not build programs in sub-configures
+URBI_ARG_ENABLE([enable-programs],
+		[Build extra programs], [yes|no], [no])
+case $enable_programs in
+  yes) ac_configure_args="$ac_configure_args --enable-programs";;
+  *)   ac_configure_args="$ac_configure_args --disable-programs";;
+esac
+
 ## -------- ##
 ## Target.  ##
 ## -------- ##
