Add test suite for specifications.
	* doc/check.py: New. Test script.
	* doc/specs/Makefile: Add check rule.
	* doc/specs/URBI.INI: New. Predefine some objects for tests.
	* doc/specs/lang.tex: Fix examples.

--- a/doc/specs/Makefile
+++ b/doc/specs/Makefile
@@ -26,3 +26,8 @@ share-ci:
 	git commit -m "Update $(share_dir)." $(share_dir)
 
 urbi-specs.pdf: urbi-specs.sty $(wildcard *.tex)
+
+URBI_CONSOLE = urbi-console
+
+check:
+	URBI_CONSOLE=$(URBI_CONSOLE) ../check.py lang.tex
