Use src/kernel/config.h instead of kernelconfig.h.
	* configure.ac, src/kernel/ubanner.cc, src/kernel/uobject.cc,
	* src/object/float.cc, src/object/symbols.hh,
	* src/parser/parser-impl.cc, src/parser/ugrammar.y,
	* src/scheduler/coroutine.hh, src/scheduler/pthread-coro.hh: Here.

--- a/configure.ac
+++ b/configure.ac
@@ -112,5 +112,5 @@ URBI_LIBTOOL
 
 URBI_TESTS
 AC_CONFIG_FILES([Makefile src/Makefile])
-AC_CONFIG_HEADERS([kernelconfig.h])
+AC_CONFIG_HEADERS([src/kernel/config.h])
 AC_OUTPUT
