src/examples/Makefile.am -> local.mk.
	* src/examples/Makefile.am: Remove.
	* src/examples/local.mk: New.
	* configure.ac, src/Makefile.am: Adjust.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -1,9 +1,22 @@
-include $(top_srcdir)/build-aux/init.mk
+include $(top_srcdir)/flags.mk
+AUTOMAKE_OPTIONS += subdir-objects
 
-SUBDIRS = liburbi
+AM_CPPFLAGS += $(BOOST_CPPFLAGS)
+
+# There is no AM_LDADD currently, which is quite inconsistent...
+LDADD = $(AM_LDADD)
+AM_LDADD =					\
+  $(top_builddir)/src/liburbi/liburbi.la	\
+  $(top_builddir)/jpeg-6b/libjpeg.la		\
+  $(PTHREAD_LIBS)
+
+bin_PROGRAMS =
+include examples/local.mk
+
+SUBDIRS = liburbi .
 
 if EXAMPLES
-SUBDIRS += utils examples
+SUBDIRS += utils
 endif
 
 ## ------------ ##
