src/utils/Makefile.am -> local.mk.
	* src/utils/Makefile.am: Rename as...
	* src/utils/local.mk: this.
	Adjust.
	* configure.ac, src/Makefile.am: Adjust.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -12,12 +12,9 @@ AM_LDADD =					\
 
 bin_PROGRAMS =
 include examples/local.mk
+include utils/local.mk
 
 SUBDIRS = liburbi .
-
-if EXAMPLES
-SUBDIRS += utils
-endif
 
 ## ------------ ##
 ## version.hh.  ##
