--- a/sdk-remote/src/liburbi/Makefile.am
+++ b/sdk-remote/src/liburbi/Makefile.am
@@ -11,14 +11,7 @@ if BINDINGS
 endif
 SUBDIRS += . tests
 
-## --------- ##
-## uobject.  ##
-## --------- ##
-
-include $(top_srcdir)/build-aux/svn-externals.mk
-uobject_srcdir = $(srcdir)/uobject
-include uobject/uobject.mk
-urbiinclude_HEADERS = $(uobject_headers)
+include libuco/local.mk
 
 ## ------------ ##
 ## liburbi.la.  ##
@@ -30,21 +23,20 @@ umain_DATA = umain.cc
 env_LTLIBRARIES = libuobject.la
 lib_LTLIBRARIES = liburbi.la
 
-libuobject_la_SOURCES =                         \
-$(uobject_sources)				\
-package-info.cc					\
-ucallbacks.cc					\
-uobject.cc					\
-usystem.cc					\
-utimer-callback.cc				\
-uvar.cc
+libuobject_la_SOURCES =				\
+  package-info.cc				\
+  ucallbacks.cc					\
+  uobject.cc					\
+  usystem.cc					\
+  utimer-callback.cc				\
+  uvar.cc
 
 liburbi_la_SOURCES =				\
-uobject/uvalue-common.cc                        \
-uabstractclient.cc				\
-uclient.cc					\
-uconversion.cc					\
-usyncclient.cc
+  libuco/uvalue-common.cc			\
+  uabstractclient.cc				\
+  uclient.cc					\
+  uconversion.cc				\
+  usyncclient.cc
 
 
 liburbi_la_CPPFLAGS = $(AM_CPPFLAGS) -DBUILDING_URBI_SDK -DBUILDING_LIBPORT
@@ -52,7 +44,7 @@ liburbi_la_LIBADD = $(LIBADD)
 liburbi_la_LDFLAGS = -no-undefined
 
 libuobject_la_CPPFLAGS = $(AM_CPPFLAGS) -DBUILDING_URBI_SDK -DBUILDING_LIBPORT
-libuobject_la_LIBADD = $(LIBADD) liburbi.la
+libuobject_la_LIBADD = $(LIBADD) libuco/libuco.la liburbi.la
 libuobject_la_LDFLAGS = -no-undefined
 
 
