--- a/sdk-remote/.gitignore
+++ b/sdk-remote/.gitignore
@@ -1,11 +1,23 @@
-INSTALL
-Makefile.in
-aclocal.m4
-autom4te.cache
-build-aux
-configure
-include/libport
-lib/libport
-sdk
-src/liburbi/uobject/urbi/ucallbacks.hh
-jpeg-6b
+/INSTALL
+/Makefile.in
+/aclocal.m4
+/autom4te.cache
+/build-aux
+/configure
+/doc/Makefile.in
+/externals/libjpeg-6b/Makefile.in
+/externals/libport/Makefile.in
+/externals/libport/doc/Makefile.in
+/externals/libport/gui/Makefile.in
+/externals/libport/lib/libport/Makefile.in
+/externals/libport/tests/Makefile.in
+/externals/libport/tests/libport/Makefile.in
+/include/libport
+/include/urbi/ucallbacks.hh
+/jpeg-6b
+/lib/libport
+/sdk
+/src/Makefile.in
+/src/liburbi/Makefile.in
+/src/liburbi/swig/Makefile.in
+/src/liburbi/tests/Makefile.in
