--- a/Makefile.am
+++ b/Makefile.am
@@ -14,30 +14,9 @@ build-aux/output-to-dot
 
 # dev.
 devdir = dev/
-include dev/dev.mk
+include dev/local.mk
 
-## -------------------------- ##
-## Installed kernel headers.  ##
-## -------------------------- ##
-
-kernelincludekerneldir = $(kernelincludedir)/kernel
-kernelincludekernel_HEADERS =			\
-include/kernel/exception.hh			\
-include/kernel/exception.hxx			\
-include/kernel/fwd.hh				\
-include/kernel/kernconf.hh			\
-include/kernel/uconnection.hh			\
-include/kernel/uconnection.hxx			\
-include/kernel/userver.hh			\
-include/kernel/userver.hxx			\
-include/kernel/utypes.hh
-
-include share/urbi/local.mk
-
-nodist_kernelincludekernel_HEADERS =		\
-include/kernel/version.hh
-
-
+include include/local.mk
 
 ## ------------------------------------- ##
 ## Generate the list of symbols we use.  ##
@@ -46,36 +25,6 @@ include/kernel/version.hh
 .PHONY: symbols
 symbols:
 	$(MAKE) $(AM_MAKEFLAGS) -C src $@
-
-
-
-## ------- ##
-## Check.  ##
-## ------- ##
-
-kernel_headers = 				\
-  $(kernelincludekernel_HEADERS)		\
-  $(nodist_kernelincludekernel_HEADERS)
-
-SKIP_HEADERS_STD = \
-  $(EGREP) -v '^<(cstring|string|cstdarg|iomanip|sstream|iosfwd)>$$'
-
-nullstring :=
-space := $(nullstring) # end of the line
-
-SKIP_HEADERS_KERNEL_PUBLIC := \
-  $(EGREP) -v "^<$(subst $(space),|,$(subst include/,,$(kernel_headers)))>$$"
-
-check-local:
-# It is forbidden for public headers to depend on non public headers.
-	@echo "Checking whether private headers are included by public headers."
-	for i in $(kernelincludekernel_HEADERS);			\
-	do								\
-	  ! < $(srcdir)/$$i sed -ne '/^# *include */{s///;p;}' |	\
-	      $(EGREP) -v '^<(boost|libport)/' |			\
-	      $(SKIP_HEADERS_STD) |					\
-	      $(SKIP_HEADERS_KERNEL_PUBLIC);				\
-	done
 
 # check-html, check-clean, check-uob etc.
 check-%:
