--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,29 @@
 .deps
+/Makefile.in
+/aclocal.m4
+/autom4te.cache
 /build-aux
 /configure
 /dev/*.pyc
+/doc/Makefile.in
 /lib
 /lib/network
 /sdk
 /sdk-remote
+/src/Makefile.in
 /src/kernel/config.h.in
 /src/object/symbols.hh.old
-Makefile.in
-aclocal.m4
-autom4te.cache
+/src/parser/location.hh
+/src/parser/location.hh.bak
+/src/parser/position.hh
+/src/parser/position.hh.bak
+/src/parser/stack.hh
+/src/parser/stack.hh.bak
+/src/parser/ugrammar.cc
+/src/parser/ugrammar.hh
+/src/parser/ugrammar.hh.bak
+/src/parser/ugrammar.html
+/src/parser/ugrammar.output
+/src/parser/ugrammar.stamp
+/src/parser/ugrammar.xml
+/tests/Makefile.in
