--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /sdk-remote
 /src/Makefile.in
 /src/kernel/config.h.in
+/src/object/precompiled-symbols.hh
+/src/object/precompiled-symbols.stamp
 /src/object/symbols.hh.old
 /src/parser/location.hh
 /src/parser/location.hh.bak
