Move src/liburbi/tests into src/tests.
	* src/liburbi/tests/Makefile.am: Rename as...
	* src/tests/Makefile.am: this.
	* src/liburbi/tests/checkfiles/removecallbacks.cc: Rename as...
	* src/tests/checkfiles/removecallbacks.cc: this.
	* src/liburbi/tests/checkfiles/values.cc: Rename as...
	* src/tests/checkfiles/values.cc: this.
	* src/liburbi/tests/liburbi-check.as: Rename as...
	* src/tests/liburbi-check.as: this.
	* src/liburbi/tests/tests.cc: Rename as...
	* src/tests/tests.cc: this.
	* src/liburbi/tests/tests.hh: Rename as...
	* src/tests/tests.hh: this.
	* src/liburbi/tests/valgrind-suppressions: Rename as...
	* src/tests/valgrind-suppressions: this.

	* .gitignore, configure.ac, src/Makefile.am,
	src/liburbi/Makefile.am: Adjust.

--- a/sdk-remote/configure.ac
+++ b/sdk-remote/configure.ac
@@ -162,7 +162,7 @@ AC_CONFIG_SUBDIRS([jpeg-6b])
 AC_CONFIG_FILES([Makefile
 	  src/Makefile
 	  src/liburbi/Makefile
-		  src/liburbi/tests/Makefile
 		  src/liburbi/swig/Makefile
+		  src/tests/Makefile
 ])
 AC_OUTPUT
