More src/liburbi/swig to src/swig.
	* src/liburbi/swig/Makefile.am: Rename as...
	* src/swig/Makefile.am: this.
	* src/liburbi/swig/liburbi.i: Rename as...
	* src/swig/liburbi.i: this.
	* src/liburbi/swig/sample.cs: Rename as...
	* src/swig/sample.cs: this.
	* src/liburbi/swig/sample.java: Rename as...
	* src/swig/sample.java: this.
	* src/liburbi/swig/sample.lua: Rename as...
	* src/swig/sample.lua: this.
	* src/liburbi/swig/sample.php: Rename as...
	* src/swig/sample.php: this.
	* src/liburbi/swig/sample.pl: Rename as...
	* src/swig/sample.pl: this.
	* src/liburbi/swig/sample.py: Rename as...
	* src/swig/sample.py: this.
	* src/liburbi/swig/sample.rb: Rename as...
	* src/swig/sample.rb: this.
	* src/liburbi/swig/swig_python.hh: Rename as...
	* src/swig/swig_python.hh: this.
	* src/liburbi/swig/swig_ruby.hh: Rename as...
	* src/swig/swig_ruby.hh: this.

	* src/Makefile.am, src/liburbi/Makefile.am: Adjust.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -13,6 +13,9 @@ include examples/local.mk
 include utils/local.mk
 
 SUBDIRS = liburbi tests .
+if BINDINGS
+ SUBDIRS += swig
+endif
 
 ## ------------ ##
 ## version.hh.  ##
