Use local.mk for liburbi.
	Move libuco next to liburbi in src.
	* src/liburbi/libuco/ChangeLog: Rename as...
	* src/libuco/ChangeLog: this.
	* src/liburbi/libuco/README: Rename as...
	* src/libuco/README: this.
	* src/liburbi/libuco/uobject-hub-common.cc: Rename as...
	* src/libuco/uobject-hub-common.cc: this.
	* src/liburbi/libuco/urbi-main.cc: Rename as...
	* src/libuco/urbi-main.cc: this.
	* src/liburbi/libuco/utable.cc: Rename as...
	* src/libuco/utable.cc: this.
	* src/liburbi/libuco/utimer-table.cc: Rename as...
	* src/libuco/utimer-table.cc: this.
	* src/liburbi/libuco/uvalue-common.cc: Rename as...
	* src/libuco/uvalue-common.cc: this.
	* src/liburbi/libuco/uvar-common.cc: Rename as...
	* src/libuco/uvar-common.cc: this.
	* src/liburbi/libuco/local.mk: Rename as...
	* src/libuco/local.mk: this.
	Adjust.

	Use a local.mk for liburbi.
	* src/liburbi/Makefile.am: Rename as...
	* src/liburbi/local.mk: this.
	Adjust.

	* configure.ac, flags.mk, src/Makefile.am, src/examples/local.mk,
	* src/swig/Makefile.am, src/utils/local.mk: Adjust.

--- a/sdk-remote/src/swig/Makefile.am
+++ b/sdk-remote/src/swig/Makefile.am
@@ -3,7 +3,7 @@ include $(top_srcdir)/build-aux/init.mk
 AM_CPPFLAGS += -I$(top_srcdir)/src/liburbi/swig
 AM_CXXFLAGS += $(PTHREAD_CFLAGS) $(WARNING_CXXFLAGS) -fpic
 
-bin_SCRIPTS =					\
+dist_bin_SCRIPTS +=				\
   sample.cs					\
   sample.java					\
   sample.lua					\
