--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -4,15 +4,16 @@ AUTOMAKE_OPTIONS += subdir-objects
 AM_CPPFLAGS += $(BOOST_CPPFLAGS)
 
 AM_LDADD =					\
-  $(top_builddir)/src/liburbi/liburbi.la	\
+  liburbi/liburbi.la				\
   $(top_builddir)/jpeg-6b/libjpeg.la		\
   $(PTHREAD_LIBS)
 
-bin_PROGRAMS =
 include examples/local.mk
+include libuco/local.mk
+include liburbi/local.mk
 include utils/local.mk
 
-SUBDIRS = liburbi tests .
+SUBDIRS = . tests
 if BINDINGS
  SUBDIRS += swig
 endif
