Move urbi-launch out of liburbi.
	* src/liburbi/urbi-launch.cc: Rename as...
	* src/urbi-launch.cc: this.
	* src/Makefile.am, src/liburbi/local.mk: Adjust.

--- a/sdk-remote/src/Makefile.am
+++ b/sdk-remote/src/Makefile.am
@@ -25,3 +25,16 @@ endif
 
 REVISION_FILE = version.hh
 include $(top_srcdir)/build-aux/revision.mk
+
+
+bin_PROGRAMS += urbi-launch
+urbi_launch_SOURCES = urbi-launch.cc
+urbi_launch_CPPFLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS)
+urbi_launch_LDADD =				\
+  $(AM_LDADD)					\
+  $(BOOST_FILESYSTEM_LIBS) $(BOOST_SYSTEM_LIBS)	\
+  $(LTDL_LIBS)					\
+  liburbi/liburbi.la
+urbi_launch_LDFLAGS =					\
+  $(AM_LDFLAGS)						\
+  $(BOOST_FILESYSTEM_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS)
