Add "throw" without argument to rethrow an existing exception.
	* src/ast/ast.yml (Throw): Make value non-mandatory. Update
	printer.
	* src/flower/flower.hh, src/flower/flower.cc (Flower): Check
	that an argumentless "throw" is not present outside a "catch"
	block.
	* src/parser/ugrammar.y (throw): Make argument optional.
	* src/runner/interpreter.hh (current_exception_): Store current
	exception during execution of a catch block.
	* src/runner/interpreter-visit.hxx (visit(const ast::Throw*)):
	Handle argumentless "throw" as well.

--- a/src/ast/ast.yml
+++ b/src/ast/ast.yml
@@ -1324,9 +1324,13 @@ Throw:
     - value:
         type: rExp
         desc: The value to throw
+        mandatory: False
   printer:
-    - '"throw "'
-    - ~value
+    - '"throw"'
+    - '{
+         if (rConstExp m = n->value_get())
+           ostr_ << " " << *m;
+       }'
 
 # Local Variables:
 # mode: yaml
